# glassworm-detect

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  glassworm_detect.py  pyproject.toml  test_glassworm_detect.py
